# wiki-acronym-tables

./: .gitignore  CLAUDE.md  Dockerfile  PRD.md  ROADMAP.md  fly.toml  pyproject.toml  server.py
configs/: abel_prize.yaml  booker_prize.yaml  breakthrough_life_sciences.yaml  breakthrough_physics.yaml  clay_research_award.yaml  crafoord_prize.yaml  dirac_medal.yaml  fields_medal.yaml  franz_kafka_prize.yaml  gairdner_award.yaml  godel_prize.yaml  ieee_von_neumann_medal.yaml  john_bates_clark_medal.yaml  kavli_astrophysics.yaml  knuth_prize.yaml  lasker_basic_medical.yaml  man_booker_international.yaml  national_book_award_fiction.yaml  nobel_economics.yaml  nobel_literature.yaml  nobel_physics.yaml  priestley_medal.yaml  prix_goncourt.yaml  pulitzer_fiction.yaml  ramanujan_prize.yaml  right_livelihood_award.yaml  sakharov_prize.yaml  turing_award.yaml  wolf_chemistry.yaml  wolf_mathematics.yaml  wolf_physics.yaml
configs/artworks/: famous.yaml
configs/equations/: computer_science.yaml  llm_pools.json  mathematics.yaml  physics.yaml  statistics.yaml
configs/monarchs/: abbasid_caliphs.yaml  bohemia.yaml  britain.yaml  byzantium.yaml  denmark.yaml  english_commonwealth.yaml  fatimid_caliphs.yaml  france.yaml  holy_roman_empire.yaml  hungary.yaml  japan.yaml  ming_dynasty.yaml  norway.yaml  ottoman_sultans.yaml  portugal.yaml  qing_dynasty.yaml  safavid_shahs.yaml  scotland.yaml  sweden.yaml  umayyad_caliphs.yaml
configs/monologue_archive/: core_playwrights.yaml
configs/poetry/: shakespeare_sonnet_18.yaml  shakespeare_sonnets_complete.yaml  shakespeare_sonnets_selection.yaml
configs/shakespeare/: core_plays.yaml
configs/vocab/: chinese_common.audit.jsonl  chinese_common.curated.jsonl  chinese_common.policy.md  chinese_common.yaml
docs/design/: artworks-pipeline.md  equations-pipeline.md  vocab-pipeline.md
pwa/: db.js  index.html  itemKey.js  manifest.json  package-lock.json  package.json  quiz.html  quiz.js  srs.bundle.js  srs.js  sw.js  sync.js
pwa/tests/: db.test.js  generate_parity_fixture.py  parity.test.js  quiz.test.js  srs.test.js  sw.test.js  sync.test.js
results/: monarch_positions_wikidata.md  monologue_archive_passages.yaml  shakespeare_passages.yaml
results/verify_monarch_dates/: report.md
scripts/: generate_sonnets_config.py
src/deck_generator/: acronym.py  artwork_images.py  artworks_cli.py  chunker.py  corruptions.py  coverage_cli.py  deck_export.py  derive_positions.py  distractors.py  equations.py  equations_cli.py  gutenberg.py  monologue_archive_cli.py  normalise.py  poetry_cli.py  poetry_parser.py  vocab.py  vocab_cli.py  wiki_api.py  wikidata.py
src/wiki_acronyms/: acronym.py  api.py  artwork_images.py  artworks.py  artworks_cli.py  chunker.py  cli.py  country_registry.py  coverage.py  coverage_cli.py  deck_export.py  deck_loader.py  derive_positions_cli.py  desktop_app.py  distractors.py  folger.py  list_parser.py  logger.py  monarchs.py  monarchs_cli.py  monarchs_web_cli.py  monologue_archive.py  poetry_parser.py  quiz.py  quiz_cli.py  registry_cli.py  shakespeare_cli.py  srs.py  web_app.py  web_cli.py  wiki_api.py  wikidata.py  xlsx_writer.py
src/wiki_acronyms/templates/: complete.html  home.html  (+2 more)
tests/: test_acronym.py  test_api.py  test_artwork_images.py  test_artworks.py  test_chunker.py  test_cli.py  test_corruptions.py  test_country_registry.py  test_coverage.py  test_deck_export.py  test_derive_positions.py  test_desktop_app.py  test_distractors.py  test_equations.py  test_equations_cli.py  test_folger.py  test_gutenberg.py  test_list_parser.py  test_logger.py  test_monarchs.py  test_monologue_archive.py  test_normalise.py  test_playwright.py  test_poetry_parser.py  test_quiz.py  test_srs.py  test_vocab.py  test_web_app.py  test_wikidata.py  test_xlsx_writer.py
