[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-acronym-tables"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "openpyxl",
    "pyyaml",
    "pillow",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
wiki-acronym-tables = "wiki_acronyms.cli:main"
wiki-poetry = "wiki_acronyms.poetry_cli:main"
wiki-monarchs = "wiki_acronyms.monarchs_cli:main"
wiki-artworks = "wiki_acronyms.artworks_cli:main"
wiki-export-decks = "wiki_acronyms.deck_export:main"
wiki-shakespeare = "wiki_acronyms.shakespeare_cli:main"
wiki-monologue-archive = "wiki_acronyms.monologue_archive_cli:main"
wiki-registry-generate = "wiki_acronyms.registry_cli:main"
wiki-coverage-check = "wiki_acronyms.coverage_cli:main"
wiki-derive-positions = "wiki_acronyms.derive_positions_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
