[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-deck-generator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "openpyxl",
    "pyyaml",
    "pillow",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
deck-acronyms = "deck_generator.cli:main"
deck-poetry = "deck_generator.poetry_cli:main"
deck-monarchs = "deck_generator.monarchs_cli:main"
deck-artworks = "deck_generator.artworks_cli:main"
deck-export = "deck_generator.deck_export:main"
deck-shakespeare = "deck_generator.shakespeare_cli:main"
deck-monologue-archive = "deck_generator.monologue_archive_cli:main"
deck-registry-generate = "deck_generator.registry_cli:main"
deck-coverage-check = "deck_generator.coverage_cli:main"
deck-derive-positions = "deck_generator.derive_positions_cli:main"

# Deprecated aliases (pre-rename names) — drop once the orchestrator is updated.
wiki-acronym-tables = "deck_generator.cli:main"
wiki-poetry = "deck_generator.poetry_cli:main"
wiki-monarchs = "deck_generator.monarchs_cli:main"
wiki-artworks = "deck_generator.artworks_cli:main"
wiki-export-decks = "deck_generator.deck_export:main"
wiki-shakespeare = "deck_generator.shakespeare_cli:main"
wiki-monologue-archive = "deck_generator.monologue_archive_cli:main"
wiki-registry-generate = "deck_generator.registry_cli:main"
wiki-coverage-check = "deck_generator.coverage_cli:main"
wiki-derive-positions = "deck_generator.derive_positions_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
